# rigel

./: .gitignore  README.md  Scarb.toml
.github/workflows/: ci.yml
rigel-prover/: Cargo.toml
rigel-prover/fuzz/: Cargo.toml  README.md
rigel-prover/fuzz/fuzz_targets/: verify_atomic.rs  verify_batch.rs
rigel-prover/src/: lib.rs
rigel-prover/src/advanced/: mod.rs  one_out_of_many.rs  ring.rs
rigel-prover/src/batch/: mod.rs
rigel-prover/src/composition/: and.rs  batch.rs  mod.rs  or.rs  prover.rs  shared.rs  types.rs
rigel-prover/src/core/: bytes.rs  canonical.rs  challenge.rs  constants.rs  curve.rs  decode.rs  errors.rs  limits.rs  mod.rs  scalar.rs  sigma.rs  transcript.rs
rigel-prover/src/protocols/: mod.rs  pedersen.rs  types.rs
rigel-prover/src/protocols/atomic/: chaum_pedersen.rs  dlog.rs  mod.rs  okamoto.rs  schnorr.rs
rigel-prover/tests/: batch.rs  composition_adversarial.rs  roundtrip.rs  roundtrip_bytes.rs
scripts/: ci.sh
src/: advanced.cairo  composition.cairo  constructions.cairo  core.cairo  lib.cairo  protocols.cairo
src/advanced/: one_out_of_many.cairo  ring.cairo
src/composition/: and.cairo  batch.cairo  bytes.cairo  or.cairo  shared.cairo  types.cairo
src/core/: canonical.cairo  challenge.cairo  curve.cairo  encoding.cairo  errors.cairo  limits.cairo  scalar.cairo  sigma.cairo  transcript.cairo
src/protocols/: atomic.cairo  pedersen.cairo  types.cairo
src/protocols/atomic/: chaum_pedersen.cairo  dlog.cairo  okamoto.cairo  schnorr.cairo
src/tests/: suite.cairo
src/utils/: bytes.cairo
(+4 files in other folders)
