[package]
name = "rigel-prover"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
thiserror = "1.0"
starknet-crypto = "0.8.1"
once_cell = "1.19"
starknet-types-core = "0.2.4"
